# docex

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/: bank_statement.py
notes/: ARCHITECTURE.md
tests/: test_basic.py
